--- a/.gitignore
+++ b/.gitignore
@@ -10010,3 +10010,4 @@ venv/lib/python3.7/site-packages/typing_extensions-3.7.4.3.dist-info/top_level.t
 venv/lib/python3.7/site-packages/typing_extensions-3.7.4.3.dist-info/WHEEL
 venv/lib/python3.7/site-packages/typing_extensions.py
 venv/pyvenv.cfg
+*.pkl
